# scratch

./: .gitignore  CHROME-EXTENSION-ID.md  Cargo.toml  OPTIMIZATION_RESULTS.md  PERFORMANCE_REPORT.md  README.cuda.md  README.gpu-unified.md  README.gpu.md  README.parallel.md  README.windows.md  build.rs  build_cuda.sh  build_gpu.sh  build_windows_cuda.bat  build_windows_cuda.ps1  key.pem  profile_analysis.py  run_parallel.sh
src/: cuda_gpu.rs  gpu.rs  main.rs  vanity_id.cu  vanity_id.metal
