[package]
name = "vanity-id-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.9.6"
rand = "0.8.5"
sha2 = "0.10.8"
rayon = "1.8.1"
hex = "0.4.3"
num_cpus = "1.16.0"
pkcs8 = { version = "0.10.2", features = ["pem"] }
clap = { version = "4.4.18", features = ["derive"] }