[package]
name = "vanity-id-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
sha2 = "0.10.8"
rayon = "1.8.1"
hex = "0.4.3"
num_cpus = "1.16.0"
clap = { version = "4.4.18", features = ["derive"] }
crossbeam-channel = "0.5.13"
num-format = "0.4.4"
base64 = "0.21"
# GPU compute dependencies for Apple Silicon
metal = "0.27"
objc = "0.2"
cocoa = "0.25"
core-graphics = "0.23"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"
objc = "0.2"

[build-dependencies]
cc = "1.0"

[features]
default = []
cuda = []
